--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/cloudflare-pages": "^2.15.2",
     "@remix-run/react": "^2.12.1",
     "isbot": "^4.1.0",
+    "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
