--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/react": "^2.12.1",
     "gsap": "^3.13.0",
     "isbot": "^4.1.0",
+    "mind-ar": "^1.2.5",
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
